--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>shopping</title>
+    <title>软件开发功能模块推荐系统</title>
   </head>
   <body>
     <div id="app"></div>
